parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIO

Grammar

Rule 0     S' -> init
Rule 1     init -> program
Rule 2     init -> <empty>
Rule 3     program -> main labels
Rule 4     main -> MAIN DOS_PUNTOS instructions
Rule 5     main -> error instructions
Rule 6     labels -> label labels
Rule 7     labels -> <empty>
Rule 8     label -> LABEL DOS_PUNTOS instructions
Rule 9     label -> error instructions
Rule 10    instructions -> instruction instructionsprima
Rule 11    instructionsprima -> instruction instructionsprima
Rule 12    instructionsprima -> <empty>
Rule 13    instruction -> exit PUNTO_COMA
Rule 14    instruction -> unset PUNTO_COMA
Rule 15    instruction -> print PUNTO_COMA
Rule 16    instruction -> if PUNTO_COMA
Rule 17    instruction -> set PUNTO_COMA
Rule 18    instruction -> goto PUNTO_COMA
Rule 19    instruction -> error PUNTO_COMA
Rule 20    exit -> EXIT
Rule 21    goto -> GOTO LABEL
Rule 22    unset -> UNSET PAR_IZQ var PAR_DER
Rule 23    print -> PRINT PAR_IZQ var PAR_DER
Rule 24    if -> IF PAR_IZQ condition PAR_DER goto
Rule 25    condition -> expression
Rule 26    condition -> var
Rule 27    set -> var IGUAL assignation
Rule 28    var -> register
Rule 29    var -> register positions
Rule 30    register -> TEMPORAL
Rule 31    register -> PARAMETRO
Rule 32    register -> DEVUELTO
Rule 33    register -> RETORNO
Rule 34    register -> PILA
Rule 35    register -> PUNTERO
Rule 36    positions -> position positionsprima
Rule 37    positionsprima -> position positionsprima
Rule 38    positionsprima -> <empty>
Rule 39    position -> COR_IZQ cont COR_DER
Rule 40    primary -> ENTERO
Rule 41    primary -> CADENA
Rule 42    primary -> CARACTER
Rule 43    primary -> DECIMAL
Rule 44    assignation -> data
Rule 45    assignation -> array
Rule 46    assignation -> read
Rule 47    assignation -> cast
Rule 48    assignation -> expression
Rule 49    assignation -> pointer
Rule 50    data -> primary
Rule 51    data -> var
Rule 52    cont -> primary
Rule 53    cont -> register
Rule 54    array -> ARRAY PAR_IZQ PAR_DER
Rule 55    read -> READ PAR_IZQ PAR_DER
Rule 56    cast -> PAR_IZQ type PAR_DER var
Rule 57    type -> FLOAT
Rule 58    type -> INT
Rule 59    type -> CHAR
Rule 60    expression -> aritmetic
Rule 61    expression -> logical
Rule 62    expression -> bitxbit
Rule 63    expression -> ralational
Rule 64    aritmetic -> data SUMA data
Rule 65    aritmetic -> data RESTA data
Rule 66    aritmetic -> data MULT data
Rule 67    aritmetic -> data DIV data
Rule 68    aritmetic -> data MOD data
Rule 69    aritmetic -> RESTA data
Rule 70    aritmetic -> ABS PAR_IZQ data PAR_DER
Rule 71    logical -> data AND data
Rule 72    logical -> data OR data
Rule 73    logical -> data XOR data
Rule 74    logical -> NOT data
Rule 75    bitxbit -> data AND_BIT data
Rule 76    bitxbit -> data OR_BIT data
Rule 77    bitxbit -> data XOR_BIT data
Rule 78    bitxbit -> data SHIFT_DER data
Rule 79    bitxbit -> data SHIFT_IZQ data
Rule 80    bitxbit -> NOT_BIT data
Rule 81    ralational -> data ES_IGUAL data
Rule 82    ralational -> data NO_IGUAL data
Rule 83    ralational -> data MAYOR data
Rule 84    ralational -> data MENOR data
Rule 85    ralational -> data MAYOR_IGUAL data
Rule 86    ralational -> data MENOR_IGUAL data
Rule 87    pointer -> AND_BIT var

Terminals, with rules where they appear

ABS                  : 70
AND                  : 71
AND_BIT              : 75 87
ARRAY                : 54
CADENA               : 41
CARACTER             : 42
CHAR                 : 59
COMENTARIO           : 
COR_DER              : 39
COR_IZQ              : 39
DECIMAL              : 43
DEVUELTO             : 32
DIV                  : 67
DOS_PUNTOS           : 4 8
ENTERO               : 40
ES_IGUAL             : 81
EXIT                 : 20
FLOAT                : 57
GOTO                 : 21
IF                   : 24
IGUAL                : 27
INT                  : 58
LABEL                : 8 21
MAIN                 : 4
MAYOR                : 83
MAYOR_IGUAL          : 85
MENOR                : 84
MENOR_IGUAL          : 86
MOD                  : 68
MULT                 : 66
NOT                  : 74
NOT_BIT              : 80
NO_IGUAL             : 82
OR                   : 72
OR_BIT               : 76
PARAMETRO            : 31
PAR_DER              : 22 23 24 54 55 56 70
PAR_IZQ              : 22 23 24 54 55 56 70
PILA                 : 34
PRINT                : 23
PUNTERO              : 35
PUNTO_COMA           : 13 14 15 16 17 18 19
READ                 : 55
RESTA                : 65 69
RETORNO              : 33
SHIFT_DER            : 78
SHIFT_IZQ            : 79
SUMA                 : 64
TEMPORAL             : 30
UNSET                : 22
XOR                  : 73
XOR_BIT              : 77
error                : 5 9 19

Nonterminals, with rules where they appear

aritmetic            : 60
array                : 45
assignation          : 27
bitxbit              : 62
cast                 : 47
condition            : 24
cont                 : 39
data                 : 44 64 64 65 65 66 66 67 67 68 68 69 70 71 71 72 72 73 73 74 75 75 76 76 77 77 78 78 79 79 80 81 81 82 82 83 83 84 84 85 85 86 86
exit                 : 13
expression           : 25 48
goto                 : 18 24
if                   : 16
init                 : 0
instruction          : 10 11
instructions         : 4 5 8 9
instructionsprima    : 10 11
label                : 6
labels               : 3 6
logical              : 61
main                 : 3
pointer              : 49
position             : 36 37
positions            : 29
positionsprima       : 36 37
primary              : 50 52
print                : 15
program              : 1
ralational           : 63
read                 : 46
register             : 28 29 53
set                  : 17
type                 : 56
unset                : 14
var                  : 22 23 26 27 51 56 87

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . program
    (2) init -> .
    (3) program -> . main labels
    (4) main -> . MAIN DOS_PUNTOS instructions
    (5) main -> . error instructions

    $end            reduce using rule 2 (init -> .)
    MAIN            shift and go to state 4
    error           shift and go to state 5

    init                           shift and go to state 1
    program                        shift and go to state 2
    main                           shift and go to state 3

state 1

    (0) S' -> init .



state 2

    (1) init -> program .

    $end            reduce using rule 1 (init -> program .)


state 3

    (3) program -> main . labels
    (6) labels -> . label labels
    (7) labels -> .
    (8) label -> . LABEL DOS_PUNTOS instructions
    (9) label -> . error instructions

    $end            reduce using rule 7 (labels -> .)
    LABEL           shift and go to state 8
    error           shift and go to state 9

    labels                         shift and go to state 6
    label                          shift and go to state 7

state 4

    (4) main -> MAIN . DOS_PUNTOS instructions

    DOS_PUNTOS      shift and go to state 10


state 5

    (5) main -> error . instructions
    (10) instructions -> . instruction instructionsprima
    (13) instruction -> . exit PUNTO_COMA
    (14) instruction -> . unset PUNTO_COMA
    (15) instruction -> . print PUNTO_COMA
    (16) instruction -> . if PUNTO_COMA
    (17) instruction -> . set PUNTO_COMA
    (18) instruction -> . goto PUNTO_COMA
    (19) instruction -> . error PUNTO_COMA
    (20) exit -> . EXIT
    (22) unset -> . UNSET PAR_IZQ var PAR_DER
    (23) print -> . PRINT PAR_IZQ var PAR_DER
    (24) if -> . IF PAR_IZQ condition PAR_DER goto
    (27) set -> . var IGUAL assignation
    (21) goto -> . GOTO LABEL
    (28) var -> . register
    (29) var -> . register positions
    (30) register -> . TEMPORAL
    (31) register -> . PARAMETRO
    (32) register -> . DEVUELTO
    (33) register -> . RETORNO
    (34) register -> . PILA
    (35) register -> . PUNTERO

    error           shift and go to state 11
    EXIT            shift and go to state 20
    UNSET           shift and go to state 21
    PRINT           shift and go to state 23
    IF              shift and go to state 24
    GOTO            shift and go to state 25
    TEMPORAL        shift and go to state 27
    PARAMETRO       shift and go to state 28
    DEVUELTO        shift and go to state 29
    RETORNO         shift and go to state 30
    PILA            shift and go to state 31
    PUNTERO         shift and go to state 32

    instructions                   shift and go to state 12
    instruction                    shift and go to state 13
    exit                           shift and go to state 14
    unset                          shift and go to state 15
    print                          shift and go to state 16
    if                             shift and go to state 17
    set                            shift and go to state 18
    goto                           shift and go to state 19
    var                            shift and go to state 22
    register                       shift and go to state 26

state 6

    (3) program -> main labels .

    $end            reduce using rule 3 (program -> main labels .)


state 7

    (6) labels -> label . labels
    (6) labels -> . label labels
    (7) labels -> .
    (8) label -> . LABEL DOS_PUNTOS instructions
    (9) label -> . error instructions

    $end            reduce using rule 7 (labels -> .)
    LABEL           shift and go to state 8
    error           shift and go to state 9

    label                          shift and go to state 7
    labels                         shift and go to state 33

state 8

    (8) label -> LABEL . DOS_PUNTOS instructions

    DOS_PUNTOS      shift and go to state 34


state 9

    (9) label -> error . instructions
    (10) instructions -> . instruction instructionsprima
    (13) instruction -> . exit PUNTO_COMA
    (14) instruction -> . unset PUNTO_COMA
    (15) instruction -> . print PUNTO_COMA
    (16) instruction -> . if PUNTO_COMA
    (17) instruction -> . set PUNTO_COMA
    (18) instruction -> . goto PUNTO_COMA
    (19) instruction -> . error PUNTO_COMA
    (20) exit -> . EXIT
    (22) unset -> . UNSET PAR_IZQ var PAR_DER
    (23) print -> . PRINT PAR_IZQ var PAR_DER
    (24) if -> . IF PAR_IZQ condition PAR_DER goto
    (27) set -> . var IGUAL assignation
    (21) goto -> . GOTO LABEL
    (28) var -> . register
    (29) var -> . register positions
    (30) register -> . TEMPORAL
    (31) register -> . PARAMETRO
    (32) register -> . DEVUELTO
    (33) register -> . RETORNO
    (34) register -> . PILA
    (35) register -> . PUNTERO

    error           shift and go to state 11
    EXIT            shift and go to state 20
    UNSET           shift and go to state 21
    PRINT           shift and go to state 23
    IF              shift and go to state 24
    GOTO            shift and go to state 25
    TEMPORAL        shift and go to state 27
    PARAMETRO       shift and go to state 28
    DEVUELTO        shift and go to state 29
    RETORNO         shift and go to state 30
    PILA            shift and go to state 31
    PUNTERO         shift and go to state 32

    instructions                   shift and go to state 35
    instruction                    shift and go to state 13
    exit                           shift and go to state 14
    unset                          shift and go to state 15
    print                          shift and go to state 16
    if                             shift and go to state 17
    set                            shift and go to state 18
    goto                           shift and go to state 19
    var                            shift and go to state 22
    register                       shift and go to state 26

state 10

    (4) main -> MAIN DOS_PUNTOS . instructions
    (10) instructions -> . instruction instructionsprima
    (13) instruction -> . exit PUNTO_COMA
    (14) instruction -> . unset PUNTO_COMA
    (15) instruction -> . print PUNTO_COMA
    (16) instruction -> . if PUNTO_COMA
    (17) instruction -> . set PUNTO_COMA
    (18) instruction -> . goto PUNTO_COMA
    (19) instruction -> . error PUNTO_COMA
    (20) exit -> . EXIT
    (22) unset -> . UNSET PAR_IZQ var PAR_DER
    (23) print -> . PRINT PAR_IZQ var PAR_DER
    (24) if -> . IF PAR_IZQ condition PAR_DER goto
    (27) set -> . var IGUAL assignation
    (21) goto -> . GOTO LABEL
    (28) var -> . register
    (29) var -> . register positions
    (30) register -> . TEMPORAL
    (31) register -> . PARAMETRO
    (32) register -> . DEVUELTO
    (33) register -> . RETORNO
    (34) register -> . PILA
    (35) register -> . PUNTERO

    error           shift and go to state 11
    EXIT            shift and go to state 20
    UNSET           shift and go to state 21
    PRINT           shift and go to state 23
    IF              shift and go to state 24
    GOTO            shift and go to state 25
    TEMPORAL        shift and go to state 27
    PARAMETRO       shift and go to state 28
    DEVUELTO        shift and go to state 29
    RETORNO         shift and go to state 30
    PILA            shift and go to state 31
    PUNTERO         shift and go to state 32

    instructions                   shift and go to state 36
    instruction                    shift and go to state 13
    exit                           shift and go to state 14
    unset                          shift and go to state 15
    print                          shift and go to state 16
    if                             shift and go to state 17
    set                            shift and go to state 18
    goto                           shift and go to state 19
    var                            shift and go to state 22
    register                       shift and go to state 26

state 11

    (19) instruction -> error . PUNTO_COMA

    PUNTO_COMA      shift and go to state 37


state 12

    (5) main -> error instructions .

    LABEL           reduce using rule 5 (main -> error instructions .)
    error           reduce using rule 5 (main -> error instructions .)
    $end            reduce using rule 5 (main -> error instructions .)


state 13

    (10) instructions -> instruction . instructionsprima
    (11) instructionsprima -> . instruction instructionsprima
    (12) instructionsprima -> .
    (13) instruction -> . exit PUNTO_COMA
    (14) instruction -> . unset PUNTO_COMA
    (15) instruction -> . print PUNTO_COMA
    (16) instruction -> . if PUNTO_COMA
    (17) instruction -> . set PUNTO_COMA
    (18) instruction -> . goto PUNTO_COMA
    (19) instruction -> . error PUNTO_COMA
    (20) exit -> . EXIT
    (22) unset -> . UNSET PAR_IZQ var PAR_DER
    (23) print -> . PRINT PAR_IZQ var PAR_DER
    (24) if -> . IF PAR_IZQ condition PAR_DER goto
    (27) set -> . var IGUAL assignation
    (21) goto -> . GOTO LABEL
    (28) var -> . register
    (29) var -> . register positions
    (30) register -> . TEMPORAL
    (31) register -> . PARAMETRO
    (32) register -> . DEVUELTO
    (33) register -> . RETORNO
    (34) register -> . PILA
    (35) register -> . PUNTERO

  ! shift/reduce conflict for error resolved as shift
    LABEL           reduce using rule 12 (instructionsprima -> .)
    $end            reduce using rule 12 (instructionsprima -> .)
    error           shift and go to state 11
    EXIT            shift and go to state 20
    UNSET           shift and go to state 21
    PRINT           shift and go to state 23
    IF              shift and go to state 24
    GOTO            shift and go to state 25
    TEMPORAL        shift and go to state 27
    PARAMETRO       shift and go to state 28
    DEVUELTO        shift and go to state 29
    RETORNO         shift and go to state 30
    PILA            shift and go to state 31
    PUNTERO         shift and go to state 32

  ! error           [ reduce using rule 12 (instructionsprima -> .) ]

    instruction                    shift and go to state 38
    instructionsprima              shift and go to state 39
    exit                           shift and go to state 14
    unset                          shift and go to state 15
    print                          shift and go to state 16
    if                             shift and go to state 17
    set                            shift and go to state 18
    goto                           shift and go to state 19
    var                            shift and go to state 22
    register                       shift and go to state 26

state 14

    (13) instruction -> exit . PUNTO_COMA

    PUNTO_COMA      shift and go to state 40


state 15

    (14) instruction -> unset . PUNTO_COMA

    PUNTO_COMA      shift and go to state 41


state 16

    (15) instruction -> print . PUNTO_COMA

    PUNTO_COMA      shift and go to state 42


state 17

    (16) instruction -> if . PUNTO_COMA

    PUNTO_COMA      shift and go to state 43


state 18

    (17) instruction -> set . PUNTO_COMA

    PUNTO_COMA      shift and go to state 44


state 19

    (18) instruction -> goto . PUNTO_COMA

    PUNTO_COMA      shift and go to state 45


state 20

    (20) exit -> EXIT .

    PUNTO_COMA      reduce using rule 20 (exit -> EXIT .)


state 21

    (22) unset -> UNSET . PAR_IZQ var PAR_DER

    PAR_IZQ         shift and go to state 46


state 22

    (27) set -> var . IGUAL assignation

    IGUAL           shift and go to state 47


state 23

    (23) print -> PRINT . PAR_IZQ var PAR_DER

    PAR_IZQ         shift and go to state 48


state 24

    (24) if -> IF . PAR_IZQ condition PAR_DER goto

    PAR_IZQ         shift and go to state 49


state 25

    (21) goto -> GOTO . LABEL

    LABEL           shift and go to state 50


state 26

    (28) var -> register .
    (29) var -> register . positions
    (36) positions -> . position positionsprima
    (39) position -> . COR_IZQ cont COR_DER

    IGUAL           reduce using rule 28 (var -> register .)
    PAR_DER         reduce using rule 28 (var -> register .)
    SUMA            reduce using rule 28 (var -> register .)
    RESTA           reduce using rule 28 (var -> register .)
    MULT            reduce using rule 28 (var -> register .)
    DIV             reduce using rule 28 (var -> register .)
    MOD             reduce using rule 28 (var -> register .)
    AND             reduce using rule 28 (var -> register .)
    OR              reduce using rule 28 (var -> register .)
    XOR             reduce using rule 28 (var -> register .)
    AND_BIT         reduce using rule 28 (var -> register .)
    OR_BIT          reduce using rule 28 (var -> register .)
    XOR_BIT         reduce using rule 28 (var -> register .)
    SHIFT_DER       reduce using rule 28 (var -> register .)
    SHIFT_IZQ       reduce using rule 28 (var -> register .)
    ES_IGUAL        reduce using rule 28 (var -> register .)
    NO_IGUAL        reduce using rule 28 (var -> register .)
    MAYOR           reduce using rule 28 (var -> register .)
    MENOR           reduce using rule 28 (var -> register .)
    MAYOR_IGUAL     reduce using rule 28 (var -> register .)
    MENOR_IGUAL     reduce using rule 28 (var -> register .)
    PUNTO_COMA      reduce using rule 28 (var -> register .)
    COR_IZQ         shift and go to state 53

    positions                      shift and go to state 51
    position                       shift and go to state 52

state 27

    (30) register -> TEMPORAL .

    COR_IZQ         reduce using rule 30 (register -> TEMPORAL .)
    IGUAL           reduce using rule 30 (register -> TEMPORAL .)
    PAR_DER         reduce using rule 30 (register -> TEMPORAL .)
    SUMA            reduce using rule 30 (register -> TEMPORAL .)
    RESTA           reduce using rule 30 (register -> TEMPORAL .)
    MULT            reduce using rule 30 (register -> TEMPORAL .)
    DIV             reduce using rule 30 (register -> TEMPORAL .)
    MOD             reduce using rule 30 (register -> TEMPORAL .)
    AND             reduce using rule 30 (register -> TEMPORAL .)
    OR              reduce using rule 30 (register -> TEMPORAL .)
    XOR             reduce using rule 30 (register -> TEMPORAL .)
    AND_BIT         reduce using rule 30 (register -> TEMPORAL .)
    OR_BIT          reduce using rule 30 (register -> TEMPORAL .)
    XOR_BIT         reduce using rule 30 (register -> TEMPORAL .)
    SHIFT_DER       reduce using rule 30 (register -> TEMPORAL .)
    SHIFT_IZQ       reduce using rule 30 (register -> TEMPORAL .)
    ES_IGUAL        reduce using rule 30 (register -> TEMPORAL .)
    NO_IGUAL        reduce using rule 30 (register -> TEMPORAL .)
    MAYOR           reduce using rule 30 (register -> TEMPORAL .)
    MENOR           reduce using rule 30 (register -> TEMPORAL .)
    MAYOR_IGUAL     reduce using rule 30 (register -> TEMPORAL .)
    MENOR_IGUAL     reduce using rule 30 (register -> TEMPORAL .)
    PUNTO_COMA      reduce using rule 30 (register -> TEMPORAL .)
    COR_DER         reduce using rule 30 (register -> TEMPORAL .)


state 28

    (31) register -> PARAMETRO .

    COR_IZQ         reduce using rule 31 (register -> PARAMETRO .)
    IGUAL           reduce using rule 31 (register -> PARAMETRO .)
    PAR_DER         reduce using rule 31 (register -> PARAMETRO .)
    SUMA            reduce using rule 31 (register -> PARAMETRO .)
    RESTA           reduce using rule 31 (register -> PARAMETRO .)
    MULT            reduce using rule 31 (register -> PARAMETRO .)
    DIV             reduce using rule 31 (register -> PARAMETRO .)
    MOD             reduce using rule 31 (register -> PARAMETRO .)
    AND             reduce using rule 31 (register -> PARAMETRO .)
    OR              reduce using rule 31 (register -> PARAMETRO .)
    XOR             reduce using rule 31 (register -> PARAMETRO .)
    AND_BIT         reduce using rule 31 (register -> PARAMETRO .)
    OR_BIT          reduce using rule 31 (register -> PARAMETRO .)
    XOR_BIT         reduce using rule 31 (register -> PARAMETRO .)
    SHIFT_DER       reduce using rule 31 (register -> PARAMETRO .)
    SHIFT_IZQ       reduce using rule 31 (register -> PARAMETRO .)
    ES_IGUAL        reduce using rule 31 (register -> PARAMETRO .)
    NO_IGUAL        reduce using rule 31 (register -> PARAMETRO .)
    MAYOR           reduce using rule 31 (register -> PARAMETRO .)
    MENOR           reduce using rule 31 (register -> PARAMETRO .)
    MAYOR_IGUAL     reduce using rule 31 (register -> PARAMETRO .)
    MENOR_IGUAL     reduce using rule 31 (register -> PARAMETRO .)
    PUNTO_COMA      reduce using rule 31 (register -> PARAMETRO .)
    COR_DER         reduce using rule 31 (register -> PARAMETRO .)


state 29

    (32) register -> DEVUELTO .

    COR_IZQ         reduce using rule 32 (register -> DEVUELTO .)
    IGUAL           reduce using rule 32 (register -> DEVUELTO .)
    PAR_DER         reduce using rule 32 (register -> DEVUELTO .)
    SUMA            reduce using rule 32 (register -> DEVUELTO .)
    RESTA           reduce using rule 32 (register -> DEVUELTO .)
    MULT            reduce using rule 32 (register -> DEVUELTO .)
    DIV             reduce using rule 32 (register -> DEVUELTO .)
    MOD             reduce using rule 32 (register -> DEVUELTO .)
    AND             reduce using rule 32 (register -> DEVUELTO .)
    OR              reduce using rule 32 (register -> DEVUELTO .)
    XOR             reduce using rule 32 (register -> DEVUELTO .)
    AND_BIT         reduce using rule 32 (register -> DEVUELTO .)
    OR_BIT          reduce using rule 32 (register -> DEVUELTO .)
    XOR_BIT         reduce using rule 32 (register -> DEVUELTO .)
    SHIFT_DER       reduce using rule 32 (register -> DEVUELTO .)
    SHIFT_IZQ       reduce using rule 32 (register -> DEVUELTO .)
    ES_IGUAL        reduce using rule 32 (register -> DEVUELTO .)
    NO_IGUAL        reduce using rule 32 (register -> DEVUELTO .)
    MAYOR           reduce using rule 32 (register -> DEVUELTO .)
    MENOR           reduce using rule 32 (register -> DEVUELTO .)
    MAYOR_IGUAL     reduce using rule 32 (register -> DEVUELTO .)
    MENOR_IGUAL     reduce using rule 32 (register -> DEVUELTO .)
    PUNTO_COMA      reduce using rule 32 (register -> DEVUELTO .)
    COR_DER         reduce using rule 32 (register -> DEVUELTO .)


state 30

    (33) register -> RETORNO .

    COR_IZQ         reduce using rule 33 (register -> RETORNO .)
    IGUAL           reduce using rule 33 (register -> RETORNO .)
    PAR_DER         reduce using rule 33 (register -> RETORNO .)
    SUMA            reduce using rule 33 (register -> RETORNO .)
    RESTA           reduce using rule 33 (register -> RETORNO .)
    MULT            reduce using rule 33 (register -> RETORNO .)
    DIV             reduce using rule 33 (register -> RETORNO .)
    MOD             reduce using rule 33 (register -> RETORNO .)
    AND             reduce using rule 33 (register -> RETORNO .)
    OR              reduce using rule 33 (register -> RETORNO .)
    XOR             reduce using rule 33 (register -> RETORNO .)
    AND_BIT         reduce using rule 33 (register -> RETORNO .)
    OR_BIT          reduce using rule 33 (register -> RETORNO .)
    XOR_BIT         reduce using rule 33 (register -> RETORNO .)
    SHIFT_DER       reduce using rule 33 (register -> RETORNO .)
    SHIFT_IZQ       reduce using rule 33 (register -> RETORNO .)
    ES_IGUAL        reduce using rule 33 (register -> RETORNO .)
    NO_IGUAL        reduce using rule 33 (register -> RETORNO .)
    MAYOR           reduce using rule 33 (register -> RETORNO .)
    MENOR           reduce using rule 33 (register -> RETORNO .)
    MAYOR_IGUAL     reduce using rule 33 (register -> RETORNO .)
    MENOR_IGUAL     reduce using rule 33 (register -> RETORNO .)
    PUNTO_COMA      reduce using rule 33 (register -> RETORNO .)
    COR_DER         reduce using rule 33 (register -> RETORNO .)


state 31

    (34) register -> PILA .

    COR_IZQ         reduce using rule 34 (register -> PILA .)
    IGUAL           reduce using rule 34 (register -> PILA .)
    PAR_DER         reduce using rule 34 (register -> PILA .)
    SUMA            reduce using rule 34 (register -> PILA .)
    RESTA           reduce using rule 34 (register -> PILA .)
    MULT            reduce using rule 34 (register -> PILA .)
    DIV             reduce using rule 34 (register -> PILA .)
    MOD             reduce using rule 34 (register -> PILA .)
    AND             reduce using rule 34 (register -> PILA .)
    OR              reduce using rule 34 (register -> PILA .)
    XOR             reduce using rule 34 (register -> PILA .)
    AND_BIT         reduce using rule 34 (register -> PILA .)
    OR_BIT          reduce using rule 34 (register -> PILA .)
    XOR_BIT         reduce using rule 34 (register -> PILA .)
    SHIFT_DER       reduce using rule 34 (register -> PILA .)
    SHIFT_IZQ       reduce using rule 34 (register -> PILA .)
    ES_IGUAL        reduce using rule 34 (register -> PILA .)
    NO_IGUAL        reduce using rule 34 (register -> PILA .)
    MAYOR           reduce using rule 34 (register -> PILA .)
    MENOR           reduce using rule 34 (register -> PILA .)
    MAYOR_IGUAL     reduce using rule 34 (register -> PILA .)
    MENOR_IGUAL     reduce using rule 34 (register -> PILA .)
    PUNTO_COMA      reduce using rule 34 (register -> PILA .)
    COR_DER         reduce using rule 34 (register -> PILA .)


state 32

    (35) register -> PUNTERO .

    COR_IZQ         reduce using rule 35 (register -> PUNTERO .)
    IGUAL           reduce using rule 35 (register -> PUNTERO .)
    PAR_DER         reduce using rule 35 (register -> PUNTERO .)
    SUMA            reduce using rule 35 (register -> PUNTERO .)
    RESTA           reduce using rule 35 (register -> PUNTERO .)
    MULT            reduce using rule 35 (register -> PUNTERO .)
    DIV             reduce using rule 35 (register -> PUNTERO .)
    MOD             reduce using rule 35 (register -> PUNTERO .)
    AND             reduce using rule 35 (register -> PUNTERO .)
    OR              reduce using rule 35 (register -> PUNTERO .)
    XOR             reduce using rule 35 (register -> PUNTERO .)
    AND_BIT         reduce using rule 35 (register -> PUNTERO .)
    OR_BIT          reduce using rule 35 (register -> PUNTERO .)
    XOR_BIT         reduce using rule 35 (register -> PUNTERO .)
    SHIFT_DER       reduce using rule 35 (register -> PUNTERO .)
    SHIFT_IZQ       reduce using rule 35 (register -> PUNTERO .)
    ES_IGUAL        reduce using rule 35 (register -> PUNTERO .)
    NO_IGUAL        reduce using rule 35 (register -> PUNTERO .)
    MAYOR           reduce using rule 35 (register -> PUNTERO .)
    MENOR           reduce using rule 35 (register -> PUNTERO .)
    MAYOR_IGUAL     reduce using rule 35 (register -> PUNTERO .)
    MENOR_IGUAL     reduce using rule 35 (register -> PUNTERO .)
    PUNTO_COMA      reduce using rule 35 (register -> PUNTERO .)
    COR_DER         reduce using rule 35 (register -> PUNTERO .)


state 33

    (6) labels -> label labels .

    $end            reduce using rule 6 (labels -> label labels .)


state 34

    (8) label -> LABEL DOS_PUNTOS . instructions
    (10) instructions -> . instruction instructionsprima
    (13) instruction -> . exit PUNTO_COMA
    (14) instruction -> . unset PUNTO_COMA
    (15) instruction -> . print PUNTO_COMA
    (16) instruction -> . if PUNTO_COMA
    (17) instruction -> . set PUNTO_COMA
    (18) instruction -> . goto PUNTO_COMA
    (19) instruction -> . error PUNTO_COMA
    (20) exit -> . EXIT
    (22) unset -> . UNSET PAR_IZQ var PAR_DER
    (23) print -> . PRINT PAR_IZQ var PAR_DER
    (24) if -> . IF PAR_IZQ condition PAR_DER goto
    (27) set -> . var IGUAL assignation
    (21) goto -> . GOTO LABEL
    (28) var -> . register
    (29) var -> . register positions
    (30) register -> . TEMPORAL
    (31) register -> . PARAMETRO
    (32) register -> . DEVUELTO
    (33) register -> . RETORNO
    (34) register -> . PILA
    (35) register -> . PUNTERO

    error           shift and go to state 11
    EXIT            shift and go to state 20
    UNSET           shift and go to state 21
    PRINT           shift and go to state 23
    IF              shift and go to state 24
    GOTO            shift and go to state 25
    TEMPORAL        shift and go to state 27
    PARAMETRO       shift and go to state 28
    DEVUELTO        shift and go to state 29
    RETORNO         shift and go to state 30
    PILA            shift and go to state 31
    PUNTERO         shift and go to state 32

    instructions                   shift and go to state 54
    instruction                    shift and go to state 13
    exit                           shift and go to state 14
    unset                          shift and go to state 15
    print                          shift and go to state 16
    if                             shift and go to state 17
    set                            shift and go to state 18
    goto                           shift and go to state 19
    var                            shift and go to state 22
    register                       shift and go to state 26

state 35

    (9) label -> error instructions .

    LABEL           reduce using rule 9 (label -> error instructions .)
    error           reduce using rule 9 (label -> error instructions .)
    $end            reduce using rule 9 (label -> error instructions .)


state 36

    (4) main -> MAIN DOS_PUNTOS instructions .

    LABEL           reduce using rule 4 (main -> MAIN DOS_PUNTOS instructions .)
    error           reduce using rule 4 (main -> MAIN DOS_PUNTOS instructions .)
    $end            reduce using rule 4 (main -> MAIN DOS_PUNTOS instructions .)


state 37

    (19) instruction -> error PUNTO_COMA .

    error           reduce using rule 19 (instruction -> error PUNTO_COMA .)
    EXIT            reduce using rule 19 (instruction -> error PUNTO_COMA .)
    UNSET           reduce using rule 19 (instruction -> error PUNTO_COMA .)
    PRINT           reduce using rule 19 (instruction -> error PUNTO_COMA .)
    IF              reduce using rule 19 (instruction -> error PUNTO_COMA .)
    GOTO            reduce using rule 19 (instruction -> error PUNTO_COMA .)
    TEMPORAL        reduce using rule 19 (instruction -> error PUNTO_COMA .)
    PARAMETRO       reduce using rule 19 (instruction -> error PUNTO_COMA .)
    DEVUELTO        reduce using rule 19 (instruction -> error PUNTO_COMA .)
    RETORNO         reduce using rule 19 (instruction -> error PUNTO_COMA .)
    PILA            reduce using rule 19 (instruction -> error PUNTO_COMA .)
    PUNTERO         reduce using rule 19 (instruction -> error PUNTO_COMA .)
    LABEL           reduce using rule 19 (instruction -> error PUNTO_COMA .)
    $end            reduce using rule 19 (instruction -> error PUNTO_COMA .)


state 38

    (11) instructionsprima -> instruction . instructionsprima
    (11) instructionsprima -> . instruction instructionsprima
    (12) instructionsprima -> .
    (13) instruction -> . exit PUNTO_COMA
    (14) instruction -> . unset PUNTO_COMA
    (15) instruction -> . print PUNTO_COMA
    (16) instruction -> . if PUNTO_COMA
    (17) instruction -> . set PUNTO_COMA
    (18) instruction -> . goto PUNTO_COMA
    (19) instruction -> . error PUNTO_COMA
    (20) exit -> . EXIT
    (22) unset -> . UNSET PAR_IZQ var PAR_DER
    (23) print -> . PRINT PAR_IZQ var PAR_DER
    (24) if -> . IF PAR_IZQ condition PAR_DER goto
    (27) set -> . var IGUAL assignation
    (21) goto -> . GOTO LABEL
    (28) var -> . register
    (29) var -> . register positions
    (30) register -> . TEMPORAL
    (31) register -> . PARAMETRO
    (32) register -> . DEVUELTO
    (33) register -> . RETORNO
    (34) register -> . PILA
    (35) register -> . PUNTERO

  ! shift/reduce conflict for error resolved as shift
    LABEL           reduce using rule 12 (instructionsprima -> .)
    $end            reduce using rule 12 (instructionsprima -> .)
    error           shift and go to state 11
    EXIT            shift and go to state 20
    UNSET           shift and go to state 21
    PRINT           shift and go to state 23
    IF              shift and go to state 24
    GOTO            shift and go to state 25
    TEMPORAL        shift and go to state 27
    PARAMETRO       shift and go to state 28
    DEVUELTO        shift and go to state 29
    RETORNO         shift and go to state 30
    PILA            shift and go to state 31
    PUNTERO         shift and go to state 32

  ! error           [ reduce using rule 12 (instructionsprima -> .) ]
